2nd delivery 1st revision some color change, background change , and added slider

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <div class="logo_cover">
             <img src="images/Neobux logo.png" alt="Logo" />
         </div>
-        <div class="content mt-4 mb-5">
+        <div class="content mt-2 mb-5">
             <h6 style="font-size: 0.9em;">The <a href="">innovative</a> global <a href="">rewards</a> program</h6>
-            <p class="my-5" style="font-size: 0.78em;"><label style="font-size: 1.22em;">Since 2008</label> we've have shown to the world how to <a href="">build a second
+            <p class="my-5" style="font-size: 0.78em;"><label style="font-size: 1.22em;">Since 2008</label> we've have
+                shown to the world how to <a href="">build a second
                     income</a> from home</p>
             <h6 style="font-size: 0.9em;">
                 We've made it so easy! <br />
@@ -41,15 +42,75 @@
                 <p class="mb-0">Grow your <a href="">downline</a></p>
             </div>
             <button style="margin-top: 1.3em; margin-bottom: 0.9em;" class="cta button">Register Now!</button>
-            <p style="color: rgba(0, 0, 0, 0.9); font-size: 14px; font-weight: 500;">animated slide of offer-walls running here</p>
+            <div id="offer-walls-slider" class="scroll-text">
+                <ul class="d-flex align-items-center" style="list-style: none;">
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/1.png" alt="" />
+                    </div>
+                   </li>
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/2.png" alt="" />
+                    </div>
+                   </li>
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/3.png" alt="" />
+                    </div>
+                   </li>
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/4.png" alt="" />
+                    </div>
+                   </li>
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/5.png" alt="" />
+                    </div>
+                   </li>
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/6.png" alt="" />
+                    </div>
+                   </li>
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/7.png" alt="" />
+                    </div>
+                   </li>
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/8.png" alt="" />
+                    </div>
+                   </li>
+
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/9.png" alt="" />
+                    </div>
+                   </li>
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/10.png" alt="" />
+                    </div>
+                   </li>
+                   <li>
+                    <div class="slider_cover">
+                        <img src="images/Offer-walls vector/11.png" alt="" />
+                    </div>
+                   </li>
+                </ul>
+            </div>
         </div>
     </div>
 
 
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0-beta1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+    <script src="js/jquery.scrollbox.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
