--- a/index.html
+++ b/index.html
@@ -24,82 +24,97 @@
         <div class="logo_cover">
             <img src="images/Neobux logo.png" alt="Logo" />
         </div>
-        <div class="content mt-2 mb-5">
+        <div class="content mt-2">
             <h6 style="font-size: 0.9em;">The <a href="">innovative</a> global <a href="">rewards</a> program</h6>
-            <p class="my-5" style="font-size: 0.78em;"><label style="font-size: 1.22em;">Since 2008</label> we've have
+            <p class="my-5 mx-auto" style="font-size: 0.78em; max-width: 300px;"><label style="font-size: 1.22em;">Since 2008</label> we've have
                 shown to the world how to <a href="">build a second
                     income</a> from home</p>
-            <h6 style="font-size: 0.9em;">
-                We've made it so easy! <br />
-                Interact with online content
-            </h6>
-            <h6 style="font-size: 0.9em;" class="mt-5 mb-3"><a href="">Get rewarded</a> for your activity</h6>
-            <div class="points">
-                <p class="mb-0">Visit sponsored <a href="">websites</a></p>
-                <p class="mb-0">Participate in <a href="">serveys</a></p>
-                <p class="mb-0">Check special <a href="">offers</a></p>
-                <p class="mb-0">Complete <a href="">quizzez</a></p>
-                <p class="mb-0">Grow your <a href="">downline</a></p>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="text-start col-md-6">
+                        <h6 style="font-size: 0.9em;">
+                            We've made it so easy! <br />
+                            Interact with online content
+                        </h6>
+                        <h6 style="font-size: 0.9em;" class="mt-3 mb-3"><a href="">Get rewarded</a> for your activity
+                        </h6>
+
+                    </div>
+                    <div class="text-center col-md-6">
+                        <div class="points">
+                            <p class="mb-0">Visit sponsored <a href="">websites</a></p>
+                            <p class="mb-0">Participate in <a href="">serveys</a></p>
+                            <p class="mb-0">Check special <a href="">offers</a></p>
+                            <p class="mb-0">Complete <a href="">quizzez</a></p>
+                            <p class="mb-0">Grow your <a href="">downline</a></p>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button style="margin-top: 1.3em; margin-bottom: 0.9em;" class="cta button">Register
+                            Now!</button>
+                    </div>
+                </div>
             </div>
-            <button style="margin-top: 1.3em; margin-bottom: 0.9em;" class="cta button">Register Now!</button>
+
+
             <div id="offer-walls-slider" class="scroll-text">
                 <ul class="d-flex align-items-center" style="list-style: none;">
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/1.png" alt="" />
-                    </div>
-                   </li>
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/2.png" alt="" />
-                    </div>
-                   </li>
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/3.png" alt="" />
-                    </div>
-                   </li>
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/4.png" alt="" />
-                    </div>
-                   </li>
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/5.png" alt="" />
-                    </div>
-                   </li>
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/6.png" alt="" />
-                    </div>
-                   </li>
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/7.png" alt="" />
-                    </div>
-                   </li>
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/8.png" alt="" />
-                    </div>
-                   </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/1.png" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/2.png" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/3.png" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/4.png" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/5.png" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/6.png" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/7.png" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/8.png" alt="" />
+                        </div>
+                    </li>
 
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/9.png" alt="" />
-                    </div>
-                   </li>
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/10.png" alt="" />
-                    </div>
-                   </li>
-                   <li>
-                    <div class="slider_cover">
-                        <img src="images/Offer-walls vector/11.png" alt="" />
-                    </div>
-                   </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/9.png" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/10.png" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="slider_cover">
+                            <img src="images/Offer-walls vector/11.png" alt="" />
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
