first test of animation

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
                     </div>
                     <div class="text-center col-md-6">
-                        <div class="points">
+                        <div class="points" style="height: 110px;">
                             <p class="mb-0">Visit sponsored <a href="">websites</a></p>
-                            <p class="mb-0">Participate in <a href="">serveys</a></p>
-                            <p class="mb-0">Check special <a href="">offers</a></p>
-                            <p class="mb-0">Complete <a href="">quizzez</a></p>
-                            <p class="mb-0">Grow your <a href="">downline</a></p>
+                            <p class="mb-0 d-none">Participate in <a href="">serveys</a></p>
+                            <p class="mb-0 d-none">Check special <a href="">offers</a></p>
+                            <p class="mb-0 d-none">Complete <a href="">quizzez</a></p>
+                            <p class="mb-0 d-none">Grow your <a href="">downline</a></p>
                         </div>
                     </div>
                     <div class="col-12">
