the whole page liked to the main landing page

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <img src="images/Neobux logo.png" alt="Logo" />
         </div>
         <div class="content mt-2">
-            <h6 style="font-size: 0.9em;">The <a href="">innovative</a> global <a href="">rewards</a> program</h6>
+            <h6 style="font-size: 0.9em;">The <a href="https://www.neobux.com/?rh=736D617761686162">innovative</a> global <a href="https://www.neobux.com/?rh=736D617761686162">rewards</a> program</h6>
             <p class="my-5 mx-auto" style="font-size: 0.78em; max-width: 300px;"><label style="font-size: 1.22em;">Since 2008</label> we've have
-                shown to the world how to <a href="">build a second
+                shown to the world how to <a href="https://www.neobux.com/?rh=736D617761686162">build a second
                     income</a> from home</p>
             <div class="container">
                 <div class="row align-items-center">
@@ -36,17 +36,17 @@
                             We've made it so easy! <br />
                             Interact with online content
                         </h6>
-                        <h6 style="font-size: 0.9em;" class="mt-3 mb-3"><a href="">Get rewarded</a> for your activity
+                        <h6 style="font-size: 0.9em;" class="mt-3 mb-3"><a href="https://www.neobux.com/?rh=736D617761686162">Get rewarded</a> for your activity
                         </h6>
 
                     </div>
                     <div class="text-center col-md-6">
                         <div class="points" style="height: 110px;">
-                            <p class="mb-0">Visit sponsored <a href="">websites</a></p>
-                            <p class="mb-0 d-none">Participate in <a href="">serveys</a></p>
-                            <p class="mb-0 d-none">Check special <a href="">offers</a></p>
-                            <p class="mb-0 d-none">Complete <a href="">quizzez</a></p>
-                            <p class="mb-0 d-none">Grow your <a href="">downline</a></p>
+                            <p class="mb-0">Visit sponsored <a href="https://www.neobux.com/?rh=736D617761686162">websites</a></p>
+                            <p class="mb-0 d-none">Participate in <a href="https://www.neobux.com/?rh=736D617761686162">serveys</a></p>
+                            <p class="mb-0 d-none">Check special <a href="https://www.neobux.com/?rh=736D617761686162">offers</a></p>
+                            <p class="mb-0 d-none">Complete <a href="https://www.neobux.com/?rh=736D617761686162">quizzez</a></p>
+                            <p class="mb-0 d-none">Grow your <a href="https://www.neobux.com/?rh=736D617761686162">downline</a></p>
                         </div>
                     </div>
                     <div class="col-12">
