--- a/index.html
+++ b/index.html
@@ -19,108 +19,117 @@
 </head>
 
 <body>
+    <a href="https://www.neobux.com/?rh=736D617761686162" target="_blank">
+        <div class="main_cover text-center">
+            <div class="logo_cover">
+                <img src="images/Neobux logo.png" alt="Logo" />
+            </div>
+            <div class="content mt-2">
+                <h6 style="font-size: 0.9em;">The <a href="https://www.neobux.com/?rh=736D617761686162" target="_blank">innovative</a>
+                    global <a href="https://www.neobux.com/?rh=736D617761686162" target="_blank">rewards</a> program</h6>
+                <p class="my-5 mx-auto" style="font-size: 0.78em; max-width: 300px;"><label
+                        style="font-size: 1.22em;">Since
+                        2008</label> we've have
+                    shown to the world how to <a href="https://www.neobux.com/?rh=736D617761686162" target="_blank">build a second
+                        income</a> from home</p>
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="text-start col-md-6">
+                            <h6 style="font-size: 0.9em;">
+                                We've made it so easy! <br />
+                                Interact with online content
+                            </h6>
+                            <h6 style="font-size: 0.9em;" class="mt-3 mb-3"><a
+                                    href="https://www.neobux.com/?rh=736D617761686162" target="_blank">Get rewarded</a> for your
+                                activity
+                            </h6>
 
-    <div class="main_cover text-center">
-        <div class="logo_cover">
-            <img src="images/Neobux logo.png" alt="Logo" />
-        </div>
-        <div class="content mt-2">
-            <h6 style="font-size: 0.9em;">The <a href="https://www.neobux.com/?rh=736D617761686162">innovative</a> global <a href="https://www.neobux.com/?rh=736D617761686162">rewards</a> program</h6>
-            <p class="my-5 mx-auto" style="font-size: 0.78em; max-width: 300px;"><label style="font-size: 1.22em;">Since 2008</label> we've have
-                shown to the world how to <a href="https://www.neobux.com/?rh=736D617761686162">build a second
-                    income</a> from home</p>
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="text-start col-md-6">
-                        <h6 style="font-size: 0.9em;">
-                            We've made it so easy! <br />
-                            Interact with online content
-                        </h6>
-                        <h6 style="font-size: 0.9em;" class="mt-3 mb-3"><a href="https://www.neobux.com/?rh=736D617761686162">Get rewarded</a> for your activity
-                        </h6>
-
-                    </div>
-                    <div class="text-center col-md-6">
-                        <div class="points" style="height: 110px;">
-                            <p class="mb-0">Visit sponsored <a href="https://www.neobux.com/?rh=736D617761686162">websites</a></p>
-                            <p class="mb-0 d-none">Participate in <a href="https://www.neobux.com/?rh=736D617761686162">serveys</a></p>
-                            <p class="mb-0 d-none">Check special <a href="https://www.neobux.com/?rh=736D617761686162">offers</a></p>
-                            <p class="mb-0 d-none">Complete <a href="https://www.neobux.com/?rh=736D617761686162">quizzez</a></p>
-                            <p class="mb-0 d-none">Grow your <a href="https://www.neobux.com/?rh=736D617761686162">downline</a></p>
                         </div>
-                    </div>
-                    <div class="col-12">
-                        <button style="margin-top: 1.3em; margin-bottom: 0.9em;" class="cta button">Register
-                            Now!</button>
+                        <div class="text-center col-md-6">
+                            <div class="points" style="height: 110px;">
+                                <p class="mb-0">Visit sponsored <a
+                                        href="https://www.neobux.com/?rh=736D617761686162" target="_blank">websites</a></p>
+                                <p class="mb-0 d-none">Participate in <a
+                                        href="https://www.neobux.com/?rh=736D617761686162" target="_blank">serveys</a></p>
+                                <p class="mb-0 d-none">Check special <a
+                                        href="https://www.neobux.com/?rh=736D617761686162" target="_blank">offers</a></p>
+                                <p class="mb-0 d-none">Complete <a
+                                        href="https://www.neobux.com/?rh=736D617761686162" target="_blank">quizzez</a></p>
+                                <p class="mb-0 d-none">Grow your <a
+                                        href="https://www.neobux.com/?rh=736D617761686162" target="_blank">downline</a></p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <button style="margin-top: 1.3em; margin-bottom: 0.9em;" class="cta button">Register
+                                Now!</button>
+                        </div>
                     </div>
                 </div>
-            </div>
 
 
-            <div id="offer-walls-slider" class="scroll-text">
-                <ul class="d-flex align-items-center" style="list-style: none;">
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/1.png" alt="" />
-                        </div>
-                    </li>
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/2.png" alt="" />
-                        </div>
-                    </li>
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/3.png" alt="" />
-                        </div>
-                    </li>
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/4.png" alt="" />
-                        </div>
-                    </li>
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/5.png" alt="" />
-                        </div>
-                    </li>
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/6.png" alt="" />
-                        </div>
-                    </li>
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/7.png" alt="" />
-                        </div>
-                    </li>
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/8.png" alt="" />
-                        </div>
-                    </li>
+                <div id="offer-walls-slider" class="scroll-text">
+                    <ul class="d-flex align-items-center" style="list-style: none;">
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/1.png" alt="" />
+                            </div>
+                        </li>
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/2.png" alt="" />
+                            </div>
+                        </li>
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/3.png" alt="" />
+                            </div>
+                        </li>
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/4.png" alt="" />
+                            </div>
+                        </li>
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/5.png" alt="" />
+                            </div>
+                        </li>
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/6.png" alt="" />
+                            </div>
+                        </li>
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/7.png" alt="" />
+                            </div>
+                        </li>
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/8.png" alt="" />
+                            </div>
+                        </li>
 
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/9.png" alt="" />
-                        </div>
-                    </li>
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/10.png" alt="" />
-                        </div>
-                    </li>
-                    <li>
-                        <div class="slider_cover">
-                            <img src="images/Offer-walls vector/11.png" alt="" />
-                        </div>
-                    </li>
-                </ul>
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/9.png" alt="" />
+                            </div>
+                        </li>
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/10.png" alt="" />
+                            </div>
+                        </li>
+                        <li>
+                            <div class="slider_cover">
+                                <img src="images/Offer-walls vector/11.png" alt="" />
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-
-
+    </a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0-beta1/js/bootstrap.min.js"></script>
