just spelling mistake remove

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <p class="mb-0">Visit sponsored <a
                                         href="https://www.neobux.com/?rh=736D617761686162" target="_blank">websites</a></p>
                                 <p class="mb-0 d-none">Participate in <a
-                                        href="https://www.neobux.com/?rh=736D617761686162" target="_blank">serveys</a></p>
+                                        href="https://www.neobux.com/?rh=736D617761686162" target="_blank">surveys</a></p>
                                 <p class="mb-0 d-none">Check special <a
                                         href="https://www.neobux.com/?rh=736D617761686162" target="_blank">offers</a></p>
                                 <p class="mb-0 d-none">Complete <a
