added a link tag for a button to redirect it to the new tab

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <button style="margin-top: 1.3em; margin-bottom: 0.9em;" class="cta button">Register
-                                Now!</button>
+                            <a href="https://www.neobux.com/?rh=736D617761686162" target="_blank"><button style="margin-top: 1.3em; margin-bottom: 0.9em;" class="cta button">Register
+                                Now!</button></a>
                         </div>
                     </div>
                 </div>
